fix controls css
after removeing css reset from ul, controls were messed up

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1671,6 +1671,8 @@ textarea.html-export {
   background: #2199e8; }
 
 .controls-list {
+  padding: 0;
+  margin: 0;
   list-style: none; }
   .controls-list li {
     display: inline-block; }
