--- a/app/sass/_controls.scss
+++ b/app/sass/_controls.scss
@@ -5,6 +5,8 @@
   background: #2199e8;
 }
 .controls-list{
+  padding: 0;
+  margin: 0;
   list-style: none;
   li{
     display: inline-block;
